--- a/styles.css
+++ b/styles.css
@@ -56,12 +56,11 @@ nav {
 }
 
 nav h1 {
-    color: var(--primary-color)
+    color: var(--primary-color);
 }
 
 nav a {
     color: var(--primary-color);
-    transition: var(--transition)
 }
 
 nav a:hover {
@@ -112,13 +111,13 @@ nav ul li {
 
 .intro h2 {
     color: white;
-    font-size: 4rem;
+    font-size: 3.2rem;
     margin-bottom: var(--bottom-margin);
 }
 
 .intro p {
     color: white;
-    font-size: 2rem;
+    font-size: 1.7rem;
     line-height: var(--line-height);
     padding: 0.3rem 0;
 }
